2010-08-23  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        HTMLTreeBuilder should use adoptPtr
        https://bugs.webkit.org/show_bug.cgi?id=44473

        We should really use this pattern everywhere.

        * html/HTMLDocumentParser.cpp:
        (WebCore::HTMLDocumentParser::HTMLDocumentParser):
        * html/HTMLTreeBuilder.h:
        (WebCore::HTMLTreeBuilder::create):

2010-08-23  Patrick Gansterer  <paroga@paroga.com>

        Reviewed by Adam Roben.

        Set the ResourceResponse HTTP headers in RessourceHandleWin
        https://bugs.webkit.org/show_bug.cgi?id=44444

        * platform/network/win/ResourceHandleWin.cpp:
        (WebCore::queryHTTPHeader):
        (WebCore::ResourceHandle::onRequestComplete):

2010-08-23  Patrick Gansterer  <paroga@paroga.com>

        Reviewed by Adam Roben.

        Support all available biBitCount values in BitmapInfo
        https://bugs.webkit.org/show_bug.cgi?id=43724

        Add an enum with all possible values for biBitCount.
        Also remove explicit initialization of bmiHeader members,
        because that is already done in the constructor.

        * platform/win/BitmapInfo.cpp: Added property svn:eol-style.
        (WebCore::bitmapInfoForSize):
        (WebCore::BitmapInfo::create):
        (WebCore::BitmapInfo::createBottomUp):
        * platform/win/BitmapInfo.h: Added property svn:eol-style.
        (WebCore::BitmapInfo::):
        (WebCore::BitmapInfo::bytesPerLine):
        (WebCore::BitmapInfo::paddedBytesPerLine):
        (WebCore::BitmapInfo::paddedWidth):
        * platform/win/PopupMenuWin.cpp:
        (WebCore::PopupMenuWin::paint):

2010-08-23  Kent Tamura  <tkent@chromium.org>

        Unreviewed, build fix for r65852.

        * rendering/RenderTextControlSingleLine.cpp:
        (WebCore::RenderTextControlSingleLine::createSubtreeIfNeeded):
        * rendering/TextControlInnerElements.cpp: