@@ -42,7 +42,10 @@ class ScriptSourceCode;
 
 class HTMLScriptRunner : public Noncopyable {
 public:
-    HTMLScriptRunner(Document*, HTMLScriptRunnerHost*);
+    static PassOwnPtr<HTMLScriptRunner> create(Document* document, HTMLScriptRunnerHost* host)
+    {
+        return adoptPtr(new HTMLScriptRunner(document, host));
+    }
     ~HTMLScriptRunner();
 
     void detach();
@@ -57,6 +60,8 @@ public:
     bool isExecutingScript() const { return !!m_scriptNestingLevel; }
 
 private:
+    HTMLScriptRunner(Document*, HTMLScriptRunnerHost*);
+
     Frame* frame() const;
 
     void executeParsingBlockingScript();
